force-app/main/default/objects/Case/fields/A_o__c.field-meta.xml
<CustomField>
    <fullName>A_o__c</fullName>
    <description>Año del veh{iculo para correduria de seguros</description>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>