force-app/main/default/objects/Case/fields/Agente__c.field-meta.xml
<CustomField>
    <fullName>Agente__c</fullName>
    <description>Asesor que atendera el dia de la cita</description>
    <inlineHelpText>Asesor que atendera el dia de la cita</inlineHelpText>
    <label>Asesor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>