force-app/main/default/objects/Case/fields/Antiguedad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad__c</fullName>
    <formula>IF(
IsClosed,(ClosedDate) - (CreatedDate),
TODAY() - DATEVALUE(CreatedDate)
)</formula>
    <label>Antiguedad (en días)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>