force-app/main/default/objects/Case/fields/Aseguradora__c.field-meta.xml
<CustomField>
    <fullName>Aseguradora__c</fullName>
    <label>Aseguradora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSA</fullName>
            </value>
            <value>
                <fullName>INISER</fullName>
            </value>
            <value>
                <fullName>MAPFRE</fullName>
            </value>
            <value>
                <fullName>Seguros América</fullName>
            </value>
            <value>
                <fullName>Seguros LaFise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>