force-app/main/default/objects/Case/fields/Campana_taller__c.field-meta.xml
<CustomField>
    <fullName>Campana_taller__c</fullName>
    <description>Lista que almacena los tipos de campaña para recordatorio de mantenimiento del taller</description>
    <label>Campaña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1CK Y 2CK AUTOS</fullName>
            </value>
            <value>
                <fullName>1CK Y 2CK CAMIONES</fullName>
            </value>
            <value>
                <fullName>SRM A/B</fullName>
            </value>
            <value>
                <fullName>SRM C</fullName>
            </value>
            <value>
                <fullName>SRM CAMIONES</fullName>
            </value>
            <value>
                <fullName>SRM CORPORATIVO</fullName>
            </value>
            <value>
                <fullName>VEH. SIN USO</fullName>
            </value>
            <value>
                <fullName>Express Génova</fullName>
            </value>
            <value>
                <fullName>Recuperación 2018</fullName>
            </value>
            <value>
                <fullName>Express Juigalpa</fullName>
            </value>
            <value>
                <fullName>Garantía HINO 300</fullName>
            </value>
            <value>
                <fullName>Actualización de datos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>