force-app/main/default/objects/Case/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <description>Campo chasis de vehículo</description>
    <label>Chasis</label>
    <length>18</length>
    <type>Text</type>
</CustomField>