force-app/main/default/objects/Case/fields/Contrato_Auto__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Auto__c</fullName>
    <description>numero de contrato auto+</description>
    <label>Contrato Auto+</label>
    <length>30</length>
    <type>Text</type>
</CustomField>