force-app/main/default/objects/Case/fields/Contrato_PMP__c.field-meta.xml
<CustomField>
    <fullName>Contrato_PMP__c</fullName>
    <description>numero de contrato pmp</description>
    <label>Contrato PMP</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>