force-app/main/default/objects/Case/fields/Convertido_a_Lead__c.field-meta.xml
<CustomField>
    <fullName>Convertido_a_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertido a Lead</label>
    <type>Checkbox</type>
</CustomField>