force-app/main/default/objects/Case/fields/Detalles_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Detalles_del_caso__c</fullName>
    <label>Detalles del caso</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>