force-app/main/default/objects/Case/fields/Fecha_y_hora_de_la_cita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_de_la_cita__c</fullName>
    <description>Fecha y hora de la cita de taller concertada</description>
    <inlineHelpText>Fecha y hora de la cita de taller concertada</inlineHelpText>
    <label>Fecha y hora de la cita</label>
    <type>DateTime</type>
</CustomField>