force-app/main/default/objects/Case/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Débito automático activo</fullName>
            </value>
            <value>
                <fullName>Nuevo débito automátivo</fullName>
            </value>
            <value>
                <fullName>Nuevo Scrow</fullName>
            </value>
            <value>
                <fullName>Pago directo</fullName>
            </value>
            <value>
                <fullName>Scrow activo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>