force-app/main/default/objects/Case/fields/Forma_de_pago_Auto__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago_Auto__c</fullName>
    <label>Forma de pago Auto+</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto+ básico</fullName>
            </value>
            <value>
                <fullName>Auto+ con PMP</fullName>
            </value>
            <value>
                <fullName>Consolidado 1 año</fullName>
            </value>
            <value>
                <fullName>Consolidado 5 años</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>