force-app/main/default/objects/Case/fields/Forma_de_pago_PMP__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago_PMP__c</fullName>
    <label>Forma de pago PMP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cortesía</fullName>
            </value>
            <value>
                <fullName>Cuotas</fullName>
            </value>
            <value>
                <fullName>Financiado</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>