force-app/main/default/objects/Case/fields/Hay_fisico__c.field-meta.xml
<CustomField>
    <fullName>Hay_fisico__c</fullName>
    <label>¿Hay físico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>