force-app/main/default/objects/Case/fields/Inicio_de_gestion__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_gestion__c</fullName>
    <description>Campo de solo lectura para medir el tiempo de espera para la atencion. Se completa automaticamente cuando el caso pasa de estado nuevo a estado En proceso.</description>
    <label>Inicio de gestión</label>
    <type>DateTime</type>
</CustomField>