force-app/main/default/objects/Case/fields/Interes_en__c.field-meta.xml
<CustomField>
    <fullName>Interes_en__c</fullName>
    <label>Motivo del caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5 Ton</fullName>
            </value>
            <value>
                <fullName>12 Ton</fullName>
            </value>
            <value>
                <fullName>18 Ton</fullName>
            </value>
            <value>
                <fullName>2.5 Ton</fullName>
            </value>
            <value>
                <fullName>2 Ton</fullName>
            </value>
            <value>
                <fullName>3.5 Ton</fullName>
            </value>
            <value>
                <fullName>3 Ton</fullName>
            </value>
            <value>
                <fullName>4.5 Ton</fullName>
            </value>
            <value>
                <fullName>4 Ton</fullName>
            </value>
            <value>
                <fullName>5.2 Ton</fullName>
            </value>
            <value>
                <fullName>5.5 Ton</fullName>
            </value>
            <value>
                <fullName>7 Ton</fullName>
            </value>
            <value>
                <fullName>8 Ton</fullName>
            </value>
            <value>
                <fullName>9.5 Ton</fullName>
            </value>
            <value>
                <fullName>Abono o cancelación de financiamiento</fullName>
            </value>
            <value>
                <fullName>Acceso a Casa Pellas Online</fullName>
            </value>
            <value>
                <fullName>Accesorios</fullName>
            </value>
            <value>
                <fullName>Actualización de medio de pago</fullName>
            </value>
            <value>
                <fullName>Agradecimiento/Felicitaciones de Clientes</fullName>
            </value>
            <value>
                <fullName>Anulación</fullName>
            </value>
            <value>
                <fullName>AutoFlex</fullName>
            </value>
            <value>
                <fullName>Baterías</fullName>
            </value>
            <value>
                <fullName>Botes</fullName>
            </value>
            <value>
                <fullName>Calidad del producto</fullName>
            </value>
            <value>
                <fullName>Camión</fullName>
            </value>
            <value>
                <fullName>Cancelación de factura de crédito</fullName>
            </value>
            <value>
                <fullName>Cargadores Frontales</fullName>
            </value>
            <value>
                <fullName>Cita</fullName>
            </value>
            <value>
                <fullName>Cliente consultó por servicio que no brindamos</fullName>
            </value>
            <value>
                <fullName>Cliente no especifica su interés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>