force-app/main/default/objects/Case/fields/iPrioridad__c.field-meta.xml
<CustomField>
    <fullName>iPrioridad__c</fullName>
    <formula>IF(ISPICKVAL(Priority,&quot;Baja&quot;),&quot;⭐&quot;,
IF(ISPICKVAL(Priority,&quot;Media&quot;),&quot;⭐⭐⭐&quot;,         
IF(ISPICKVAL(Priority,&quot;Alta&quot;),&quot;⭐⭐⭐⭐⭐&quot;,&quot;&quot;
			)
			)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridad</label>
    <type>Text</type>
</CustomField>