force-app/main/default/objects/Case/fields/Marca_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Marca_Dollar__c</fullName>
    <description>Almacena marca de vehiculos para renta</description>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>YAMAHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>