force-app/main/default/objects/Case/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca_Dollar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGYA MT</fullName>
            </value>
            <value>
                <fullName>AGYA AT</fullName>
            </value>
            <value>
                <fullName>ALTO</fullName>
            </value>
            <value>
                <fullName>SPRESSO</fullName>
            </value>
            <value>
                <fullName>PICANTO AT</fullName>
            </value>
            <value>
                <fullName>YARIS MT</fullName>
            </value>
            <value>
                <fullName>YARIS AT</fullName>
            </value>
            <value>
                <fullName>RIO MT</fullName>
            </value>
            <value>
                <fullName>RIO AT</fullName>
            </value>
            <value>
                <fullName>DZIRE AT</fullName>
            </value>
            <value>
                <fullName>SOLUTO AT</fullName>
            </value>
            <value>
                <fullName>RAV4 MT</fullName>
            </value>
            <value>
                <fullName>RAV4 AT</fullName>
            </value>
            <value>
                <fullName>SPORTAGE MT</fullName>
            </value>
            <value>
                <fullName>SPORTAGE AT</fullName>
            </value>
            <value>
                <fullName>GRAND VITARA AT</fullName>
            </value>
            <value>
                <fullName>SORENTO AT</fullName>
            </value>
            <value>
                <fullName>CARNIVAL</fullName>
            </value>
            <value>
                <fullName>XTZ 125</fullName>
            </value>
            <value>
                <fullName>XTZ 150</fullName>
            </value>
            <value>
                <fullName>AG200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>