force-app/main/default/objects/Case/fields/Monto_PMP__c.field-meta.xml
<CustomField>
    <fullName>Monto_PMP__c</fullName>
    <label>Monto PMP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>