force-app/main/default/objects/Case/fields/Mora__c.field-meta.xml
<CustomField>
    <fullName>Mora__c</fullName>
    <label>Mora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auditorias</valueSetName>
    </valueSet>
</CustomField>