force-app/main/default/objects/Case/fields/Motivo_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_cierre__c</fullName>
    <label>Motivo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bloqueo</fullName>
            </value>
            <value>
                <fullName>Caso agotó su periodo de seguimiento</fullName>
            </value>
            <value>
                <fullName>Caso existe como prospecto</fullName>
            </value>
            <value>
                <fullName>Se Deriva a ventas</fullName>
                <label>Caso se deriva a ventas</label>
            </value>
            <value>
                <fullName>Caso ya fue atendido por correo</fullName>
            </value>
            <value>
                <fullName>Caso ya fue atendido por llamada</fullName>
                <label>Caso ya fue atendido por llamada entrante</label>
            </value>
            <value>
                <fullName>Cerrado Asignado</fullName>
            </value>
            <value>
                <fullName>Cerrado Resuelto</fullName>
            </value>
            <value>
                <fullName>Cliente canceló su solicitud</fullName>
            </value>
            <value>
                <fullName>Cliente compro</fullName>
                <label>Cliente compró</label>
            </value>
            <value>
                <fullName>Cliente compro en otro lugar</fullName>
            </value>
            <value>
                <fullName>Cliente consulta por informacion referida a pagos o estado de cuenta</fullName>
            </value>
            <value>
                <fullName>Cliente consultó por servicio que no brindamos</fullName>
            </value>
            <value>
                <fullName>Cliente cotiza otros sevicios CP</fullName>
            </value>
            <value>
                <fullName>Cliente cotizó en mostrador o llamó</fullName>
            </value>
            <value>
                <fullName>Cliente cotizó marca que no distribuimos</fullName>
            </value>
            <value>
                <fullName>Cliente desea darse de baja de los correos electronicos</fullName>
                <label>Cliente desea darse de baja de los correos electrónicos</label>
            </value>
            <value>
                <fullName>Cliente desistio de la oferta</fullName>
                <label>Cliente desistió de la oferta</label>
            </value>
            <value>
                <fullName>Cliente desistio del reclamo</fullName>
                <label>Cliente desistió del reclamo</label>
            </value>
            <value>
                <fullName>Cliente está siendo atendido por otro vendedor</fullName>
            </value>
            <value>
                <fullName>Cliente inconforme con el costo del diagnóstico</fullName>
            </value>
            <value>
                <fullName>Cliente no contestó intentos de llamada</fullName>
            </value>
            <value>
                <fullName>Cliente no cumple con los requisitos de credito</fullName>
                <label>Cliente no cumple con los requisitos de crédito</label>
            </value>
            <value>
                <fullName>Cliente no especifica su interés</fullName>
            </value>
            <value>
                <fullName>Cliente no realizo pago pago rechazado</fullName>
                <label>Cliente no realizo pago/pago rechazado</label>
            </value>
            <value>
                <fullName>Cliente no respondio a los intentos de contacto</fullName>
                <label>Cliente no respondió a los intentos de contacto</label>
            </value>
            <value>
                <fullName>Cliente nos contactará</fullName>
            </value>
            <value>
                <fullName>Cliente no tiene interés (ingresó por error)</fullName>
            </value>
            <value>
                <fullName>Cliente queria ofrecer producto/servicio</fullName>
                <label>Cliente quería ofrecer producto/servicio</label>
            </value>
            <value>
                <fullName>Cliente realizo pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>