force-app/main/default/objects/Case/fields/Motivo_del_no_fisico__c.field-meta.xml
<CustomField>
    <fullName>Motivo_del_no_fisico__c</fullName>
    <label>Motivo del no físico</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Hay_fisico__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta siniestralidad</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Canceló préstamo</fullName>
            </value>
            <value>
                <fullName>Carta de pre-renovación</fullName>
            </value>
            <value>
                <fullName>Mora</fullName>
            </value>
            <value>
                <fullName>Pérdida total</fullName>
            </value>
            <value>
                <fullName>Pérdida valores agregados</fullName>
            </value>
            <value>
                <fullName>Plan mi carro</fullName>
            </value>
            <value>
                <fullName>PLD</fullName>
            </value>
            <value>
                <fullName>Póliza de sucursal</fullName>
            </value>
            <value>
                <fullName>Seguro obligatorio</fullName>
            </value>
            <value>
                <fullName>Sin confirmar</fullName>
            </value>
            <value>
                <fullName>Solicitar renovación para nueva vigencia</fullName>
            </value>
            <value>
                <fullName>Solo tiene coberturas RCO</fullName>
            </value>
            <value>
                <fullName>Venta de vehículo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>