force-app/main/default/objects/Case/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <description>Campo para envío de plantillas de CAPESA, para que se envíe el nombre</description>
    <formula>Account.FirstName</formula>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>