force-app/main/default/objects/Case/fields/Numero_de_cita__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cita__c</fullName>
    <description>Numero de cita concertada en el sistema externo</description>
    <externalId>true</externalId>
    <inlineHelpText>Numero de cita concertada en el sistema externo</inlineHelpText>
    <label>Número de cita</label>
    <length>20</length>
    <type>Text</type>
</CustomField>