force-app/main/default/objects/Case/fields/Numero_de_referencia__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_referencia__c</fullName>
    <description>Campo que sirve para guardar numeros de referencia con registros de sistemas externos</description>
    <externalId>true</externalId>
    <inlineHelpText>Complete con el Número de oportunidad(autos/motos), Número de factura(respuestos/Alpesa),Número de contrato de reserva(Renta)</inlineHelpText>
    <label>Número de referencia</label>
    <length>25</length>
    <type>Text</type>
</CustomField>