force-app/main/default/objects/Case/fields/Placa_del_veh_culo__c.field-meta.xml
<CustomField>
    <fullName>Placa_del_veh_culo__c</fullName>
    <label>Placa del vehículo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>