force-app/main/default/objects/Case/fields/Poliza__c.field-meta.xml
<CustomField>
    <fullName>Poliza__c</fullName>
    <description>Póliza de seguro</description>
    <label>Póliza</label>
    <length>25</length>
    <type>Text</type>
</CustomField>