force-app/main/default/objects/Case/fields/Prima_total_a_o_anterior__c.field-meta.xml
<CustomField>
    <fullName>Prima_total_a_o_anterior__c</fullName>
    <label>Prima total año anterior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>