force-app/main/default/objects/Case/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automóvil</fullName>
            </value>
            <value>
                <fullName>Incendio</fullName>
            </value>
            <value>
                <fullName>Motocicleta</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>RCO</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>