force-app/main/default/objects/Case/fields/Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion__c</fullName>
    <label>Resolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>