force-app/main/default/objects/Case/fields/Sesi_n_de_Mensajer_a__c.field-meta.xml
<CustomField>
    <fullName>Sesi_n_de_Mensajer_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sesión de Mensajería</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>