force-app/main/default/objects/Case/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <description>sucursal para la correduria</description>
    <label>Sucursal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>