force-app/main/default/objects/Case/fields/Suma_asegurada__c.field-meta.xml
<CustomField>
    <fullName>Suma_asegurada__c</fullName>
    <description>Suma asegurada para correduría</description>
    <label>Suma asegurada</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>