force-app/main/default/objects/Case/fields/Tipo_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_venta__c</fullName>
    <label>Tipo de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autos Nuevos</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Venta Directa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>