force-app/main/default/objects/Case/fields/Unidad_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_negocio__c</fullName>
    <label>Unidad de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accesorios</fullName>
            </value>
            <value>
                <fullName>Alpesa</fullName>
            </value>
            <value>
                <fullName>Autos suzuki</fullName>
            </value>
            <value>
                <fullName>Autos toyota</fullName>
            </value>
            <value>
                <fullName>Autos usados</fullName>
            </value>
            <value>
                <fullName>Camiones hino</fullName>
            </value>
            <value>
                <fullName>Camiones jmc</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Correduria de seguros</fullName>
            </value>
            <value>
                <fullName>Credicap</fullName>
            </value>
            <value>
                <fullName>Distribuidores autorizados</fullName>
            </value>
            <value>
                <fullName>Division de mercadeo y resp social</fullName>
            </value>
            <value>
                <fullName>Escuela de manejo</fullName>
            </value>
            <value>
                <fullName>Informatica</fullName>
            </value>
            <value>
                <fullName>Kipesa Autos</fullName>
            </value>
            <value>
                <fullName>Kipesa Motos</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Maquinaria y equipos</fullName>
            </value>
            <value>
                <fullName>Mercadeo y Atención al Cliente</fullName>
            </value>
            <value>
                <fullName>Motolote</fullName>
            </value>
            <value>
                <fullName>Motos Velosa</fullName>
            </value>
            <value>
                <fullName>Motos Yamaha</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Proveedores</fullName>
            </value>
            <value>
                <fullName>Recursos humanos</fullName>
            </value>
            <value>
                <fullName>Rent a car</fullName>
            </value>
            <value>
                <fullName>Repuestos e industrial</fullName>
            </value>
            <value>
                <fullName>Responsabilidad Social</fullName>
            </value>
            <value>
                <fullName>Sucursal Yamaha 3S</fullName>
            </value>
            <value>
                <fullName>Taller camiones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>