force-app/main/default/objects/Case/fields/Valoracion_del_contacto__c.field-meta.xml
<CustomField>
    <fullName>Valoracion_del_contacto__c</fullName>
    <label>Valoracion del contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente super molesto</fullName>
            </value>
            <value>
                <fullName>Cliente molesto</fullName>
            </value>
            <value>
                <fullName>Cliente satisfecho</fullName>
            </value>
            <value>
                <fullName>No se puede hacer valoracion</fullName>
            </value>
            <value>
                <fullName>Cliente molesto/Cliente Hostil</fullName>
                <isActive>false</isActive>
                <label>Cliente molesto/Cliente Hostil</label>
            </value>
            <value>
                <fullName>Cliente recurrente</fullName>
                <isActive>false</isActive>
                <label>Cliente recurrente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>