force-app/main/default/objects/Case/recordTypes/Atencion_al_cliente.recordType-meta.xml
<RecordType>
    <fullName>Atencion_al_cliente</fullName>
    <active>true</active>
    <businessProcess>Atencion al cliente</businessProcess>
    <description>Tipo de registro para los casos de Atencion al cliente</description>
    <label>Atencion al cliente</label>
</RecordType>