force-app/main/default/objects/Case/recordTypes/Casos_a_tipificar.recordType-meta.xml
<RecordType>
    <fullName>Casos_a_tipificar</fullName>
    <active>true</active>
    <businessProcess>Casos a tipificar</businessProcess>
    <description>Tipo de registro para los casos pendientes de tipificar</description>
    <label>Casos a tipificar</label>
</RecordType>