force-app/main/default/objects/Case/recordTypes/Pagos_y_Cobranzas.recordType-meta.xml
<RecordType>
    <fullName>Pagos_y_Cobranzas</fullName>
    <active>true</active>
    <businessProcess>Pagos y cobranzas</businessProcess>
    <description>Casos para el proceso de pagos y cobranzas</description>
    <label>Pagos y Cobranzas</label>
</RecordType>