force-app/main/default/objects/Case/recordTypes/Renovaciones_CAPESA.recordType-meta.xml
<RecordType>
    <fullName>Renovaciones_CAPESA</fullName>
    <active>true</active>
    <businessProcess>Renovaciones</businessProcess>
    <description>Contiene el embudo de las renovaciones de seguros de capesa</description>
    <label>Renovaciones CAPESA</label>
</RecordType>