force-app/main/default/objects/Case/recordTypes/Taller.recordType-meta.xml
<RecordType>
    <fullName>Taller</fullName>
    <active>true</active>
    <businessProcess>Taller</businessProcess>
    <description>Tipo de registro para los casos de Taller</description>
    <label>Taller</label>
</RecordType>