force-app/main/default/objects/Case/recordTypes/Ventas.recordType-meta.xml
<RecordType>
    <fullName>Ventas</fullName>
    <active>true</active>
    <businessProcess>Ventas</businessProcess>
    <description>Tipo de registro designado al proceso de ventas</description>
    <label>Ventas</label>
</RecordType>